Fixes item alignment when resizing LATEST NEWS at 1160px viewport size

--- a/main.css
+++ b/main.css
@@ -309,18 +309,7 @@ div > #seasonpass {
     height: auto;
     background-color: rgba(256,256,256, 0.7);
 }
-/*#news-container-2 {*/
-/*    padding-top: 100px;*/
-/*    padding-bottom: 200px;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*    width: 100%;*/
-/*    height: auto;*/
-/*    background-color: rgba(256,256,256, 0.7);*/
-/*}*/
 #news-container-1-nested-0, #news-container-1-nested-1, #news-container-1-nested-2, #news-container-2-nested-0, #news-container-2-nested-1, #news-container-2-nested-2 {
-    /*text-wrap: none;*/
     width: 33%;
     height: 360px;
 }
@@ -723,6 +712,13 @@ tbody {
     #latest-news {
         position: absolute;
         right: 25%;
+    }
+    #news-container-1-nested-0, #news-container-2-nested-0 {
+        width: 100%;
+        height: 30%;
+    }
+    #news-container-1-nested-1, #news-container-1-nested-2, #news-container-2-nested-1, #news-container-2-nested-2 {
+        width: 50%;
     }
     #tDate-back, #tVenue-back, #tTrack-back, #tFormat-back, #button-underTable-container {
         display: none;
